--- a/web-shotacon/src/main/resources/templates/index.html
+++ b/web-shotacon/src/main/resources/templates/index.html
@@ -6,7 +6,8 @@
 <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<title>Insert title here</title>
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<title>Boy♂Next Door</title>
 </head>
 <body>
     <nav class="navbar navbar-default" role="navigation">
