--- a/web-shotacon/src/main/resources/templates/index.html
+++ b/web-shotacon/src/main/resources/templates/index.html
@@ -20,17 +20,16 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="#">Fuck You</a></li>
+                <li class="nav-item active"><a class="nav-link" href="#">Fuck Y♂u</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">VAN♂様</a></li>
                 <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
-                        Deep♂Dark Fantasy
+                        Deep♂
                         <b class="caret"></b>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">jmeter</a>
-                        <a class="dropdown-item" href="#">EJB</a>
-                        <a class="dropdown-item" href="#">Jasper Report</a>
+                        <a class="dropdown-item" href="#">Dark</a>
+                        <a class="dropdown-item" href="#">Fantasy</a>
                     </div>
                 </li>
             </ul>
