--- a/web-shotacon/src/main/resources/templates/index.html
+++ b/web-shotacon/src/main/resources/templates/index.html
@@ -41,8 +41,8 @@
 
 <!-- Footer -->
 <nav th:fragment="footer" class="navbar fixed-bottom navbar-light bg-light">
-    <div class="container text-center navbar-text">
-       Copyright © Shotacon
+    <div class="container text-center navbar-text" style="width: 300px;">
+    Copyright © Shotacon
     </div>
 </nav>
 </body>
