--- a/web-shotacon/src/main/resources/static/css/main.css
+++ b/web-shotacon/src/main/resources/static/css/main.css
@@ -8,5 +8,5 @@
     width: 100%;
     overflow:auto;
     position:absolute;
-    background-image: url(https://uploadbeta.com/api/pictures/random/?key=BingEverydayWallpaperPicture);
+    /*background-image: url(https://uploadbeta.com/api/pictures/random/?key=BingEverydayWallpaperPicture);*/
 }
