--- a/web-shotacon/src/main/resources/templates/index.html
+++ b/web-shotacon/src/main/resources/templates/index.html
@@ -30,8 +30,8 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav mr-auto">
-                    <!--<li class="nav-item active"><a class="nav-link" href="#">Fuck Y♂u</a></li>-->
-                    <li class="nav-item active"><a class="nav-link" onclick="van()" href="#">VAN♂様</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#">当日♂票房</a></li>
+                    <!--<li class="nav-item active"><a class="nav-link" onclick="van()" href="#">VAN♂様</a></li>-->
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
                             Deep♂
